--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+students:
+    resource: ./routes/students.yml
+    prefix: /api
+    name_prefix: students_
