--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "require-dev": {
         "symfony/browser-kit": "5.2.*",
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/phpunit-bridge": "^5.2",
+        "ext-json": "*"
     },
     "config": {
         "optimize-autoloader": true,
