configure json format for student group

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,5 @@ students:
     resource: ./routes/students.yml
     prefix: /api
     name_prefix: students_
+    requirements:
+        _format: json
