--- a/config/routes/students.yml
+++ b/config/routes/students.yml
@@ -1,7 +1,5 @@
 create:
-  path: /student
+  path: /student.{_format}
   methods: POST|PUT
   controller: App\Controller\Student\PostController
   format: json
-  requirements:
-    _format: json
