--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2.5",
+        "ext-json": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "5.2.*",
@@ -17,8 +18,7 @@
     },
     "require-dev": {
         "symfony/browser-kit": "5.2.*",
-        "symfony/phpunit-bridge": "^5.2",
-        "ext-json": "*"
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
         "optimize-autoloader": true,
