--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
-        "ext-json": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "ramsey/uuid": "^4.1",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
