--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
         "ramsey/uuid": "^4.1",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
