--- a/config/routes/students.yml
+++ b/config/routes/students.yml
@@ -1,9 +1,14 @@
+delete:
+  path: /student/{studentId}.{_format}
+  methods: DELETE
+  controller: App\Controller\Student\DeleteController
+  format: json
+
 update:
   path: /student/{studentId}.{_format}
   methods: POST|PUT
   controller: App\Controller\Student\UpdateController
   format: json
-
 
 create:
   path: /student.{_format}
