--- a/config/routes/marks.yml
+++ b/config/routes/marks.yml
@@ -3,3 +3,9 @@ create:
   methods: POST|PUT
   controller: App\Controller\Mark\PostController
   format: json
+
+average:
+  path: /marks/average.{_format}
+  methods: GET
+  controller: App\Controller\Mark\AverageController
+  format: json
