--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,15 @@
+home:
+    path: /
+    methods: GET
+    controller: App\Controller\HomeController
+    format: json
+
+doc:
+    path: /api/doc
+    methods: GET
+    controller: App\Controller\HomeController
+    format: json
+
 students:
     resource: ./routes/students.yml
     prefix: /api
